project.html project.css write code of waste management website

--- a/sanket.html
+++ b/sanket.html
@@ -18,8 +18,6 @@
         }
     </style> -->
 </head>
-
-
 <body>
     <header>
         <nav class="navbar">
@@ -31,6 +29,7 @@
                 <div class="search"><input type="search" placeholder="search here......."></div>
             </ul>
         </nav>
+        <img src="photo.jpg" alt="loading image">
     </header>
     <h1 id="Portfolio"> This is Sanket's Portfolio.</h1>
     <!-- inline css -->
