web devlopement day6

--- a/project.html
+++ b/project.html
@@ -10,12 +10,13 @@ collection routes,reducing enviourments impacts and imporoving efficiency in was
 </head>
 <link rel="stylesheet" href="project.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+
 <body>
     <header class="header">
         <div class="left">
             <img src="mylogo.png" alt="Loading Image">
             <div>Sanket Vekariya</div>
-            <div>Manage west <br>Save enviourment</div>
+            <div>Manage West <br>Save Enviournment</div>
         </div>
         <div class="mid">
             <div class="navbar">
@@ -31,20 +32,34 @@ collection routes,reducing enviourments impacts and imporoving efficiency in was
         </div>
         <div class="right">
             <button class="btn"><a href="https://wa.me/+918140095059" target="_blank">whatsapp me</a></button>
-            <button class="btn"><a href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcSKhbqZKhwPWKxRxgPDGVxkkCxnCTkXDcjVRCQNBkXlRKNMNNwMrLSTdPmfrPKvnWHLzkVSD " target="_blank">Email Me</a></button>
+            <button class="btn"><a
+                    href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcSKhbqZKhwPWKxRxgPDGVxkkCxnCTkXDcjVRCQNBkXlRKNMNNwMrLSTdPmfrPKvnWHLzkVSD "
+                    target="_blank">Email Me</a></button>
         </div>
+        <div class="images">
+            <img src="img1.jpg" alt="image Loading">
+            <img src="img2.jpg" alt="image Loading">
+            <img src="img3.jpg" alt="image Loading">
+            <img src="img4.jpeg" alt="image Loading">
+            <img src="img5.jpg" alt="image Loading">
+            <div class="lg">
+                <p>In the world of recycling, every discarded item is a second chance waiting to happen. Let's invest in that potential and fuel the cycle of continuous reuse.</p>
+            </div>        
     </header>
     <div class="container">
         <h3>Let's celebrate What's possible by investing in recycling and waste solution that
             help fuel continous reuse of materials</h3>
+        <p>Lets Solve Global Problem.!</p>
+        <h4>Be a Recycler, Be a saver.</h4>
         <form action="sanket.php">
             <div class="form-grp">
                 Enter username :<input type="text" name="username" id="username" placeholder="sanketpatel123">
                 <br>Enter password :<input type="password" name="password" id="password" placeholder="Sanket$321">
             </div>
             <br><input class="btn" type="button" value="Login">
-                <input class = "btn" type="button" value="Register">
+            <input class="btn" type="button" value="Register">
         </form>
+    </div>
     </div>
 </body>
 
