--- a/project2.html
+++ b/project2.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="project2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
+    <title>online best food delivery site</title>
 </head>
+
 <body>
-    
-</body>
-</html>
+    <div class="navbar">
+        <header>
+            <!-- <img src="./project2/mylogo.png" alt="loading image"> -->
+            <ul>
+                <li><a href="#" target="_blank">home</a></li>
+                <li><a href="#" target="_blank">about</a></li>
+                <li><a href="#" target=" _blank">contact us</a></li>
+                <li><a href="#" target="_blank">help</a></li>
+            </ul>
+        </header>
+    </div>
+    <div class="container">
+        <h2>Welcome to food delivery</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vitae ipsam blanditiis hic? Dicta quasi
+            quibusdam quaerat optio quo saepe perspiciatis, illum ut odit reprehenderit harum sapiente fugit. Doloribus,
+            nulla! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quaerat reprehenderit doloremque
+            maxime ipsa at veritatis earum perspiciatis consequatur porro, distinctio eveniet quis laboriosam eos
+            dignissimos ullam consequuntur, voluptas rerum!
+        </p>
+    </div>
+    <div class="services">
+        <h2 class="services">services</h2>
+    </div>
+    <div class="secondcontainer">
+        <div class="box" id="firstbox">
+            <img src="./project2/pizza.jpeg" alt="loading image">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga nam, explicabo quia ducimus animi voluptas
+                maxime sed reprehenderit s.</p>
+            </div>
+            <div class="box" id="secondbox">
+                <img src="./project2/food.jpeg" alt="loading image">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam sunt distinctio ab doloribus blanditiis,
+                    nemo nihil consectetur sint esse est quisquam. Facere aspe.</p>
+                </div>
+                <div class="box" id="thirdbox">
+                    <img src="./project2/delivery.webp" alt="loading image">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam sunt distinctio ab doloribus blanditiis,
+                        nemo nihil consectetur sint esse est quisquam. Facere aspe.</p>
+                    </div>
+                </div>
+                <div class="ourclients">
+                    <h2 class="clients">Our Clients</h2>
+                    <div class="thirdcontainer">
+                        <img  src="./project2/google.png" alt="loading image">
+                        <img  src="./project2/swiggy.png" alt="loading image">
+                        <img  src="./project2/zomato.png" alt="loading image">
+                    </div>
+                </div>
+
+                <div class="contactus">
+                    <h2>contact us</h2>
+                   Name :  <input type="text" placeholder="enter your name" name = "name" id="name">
+                   Mobile NO. : <input type="number" placeholder="enter your mobile no" name="Mobileno id="Mobileno>
+                   Email : <input type="email" placeholder="enter your email " name="email" id="email">
+                  <input type="button" value="Submit here">
+                </div>
+            </body>
+            <footer>
+                <p>all copyrights riserved  &copy; </p>
+                This website is made by sanket vekariya
+                <img src="./project2/mylogo.png" alt="loading image">
+            </footer>
+            </html>
