--- a/.vscode/javascript_array.html
+++ b/.vscode/javascript_array.html
@@ -34,6 +34,15 @@
         name.push("welcome to coding world@#!$")
         console.log(name)
 
+        function factorial(num){
+            let arr = Array.from(Array(num+3).keys());
+            let c = arr.slice(1,).reduce((a,b)=>a*b);
+            console.log(c);
+            }
+            
+        let num = 4;
+        factorial(num);
+        
     </script>
 </body>
 </html>
