--- a/.vscode/DOM.html
+++ b/.vscode/DOM.html
@@ -3,15 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document object model </title>
+    <title>Document object model</title>
+    <script src="dom1.js"></script>
+    <style>
+        .container .box {
+            height: 100px;
+            width: 100px;
+            border: 2px solid black;
+            border-radius: 12px;
+            margin: 12px;
+            padding: 12px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1> DOM - Document object model</h1>
-        <p>document object model is used to represent html page into tree structure.</p>
+        <div class="box">box1</div>
+        <div class="box">box2</div>
+        <div class="box">box3</div>
+        <div class="box">box4</div>
+        <div class="box">box5</div>
     </div>
+    <table>
+        <tr>
+            <th>sr no.</th>
+            <th>name</th>
+            <th>enrollment number</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>sanket</td>
+            <td>210160107008</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>sanket</td>
+            <td>210160107008</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>sanket</td>
+            <td>210160107008</td>
+        </tr>
+    </table>
 </body>
-<script>
-    console.log(document.body);
-</script>
 </html>
+
+
+
+
+
+
+
+
+    
+
+        
