try catch in js

--- a/position.html
+++ b/position.html
@@ -20,10 +20,12 @@
             padding : 5px 5px;
             /* position: static; */
         }
-       /* #box-3{  */
-            /* overlapped box4 by box3 */
-            /* position: absolute; */
-        /* } */
+        /* #box-3{   */
+             /* overlapped box4 by box3  */
+             /* position: absolute;  */
+             /* background-color: rebeccapurple; */
+             /* right: 100px; */
+        /* }  */
         /* #box-3{ */
             /* gapped in old space */
             /* position: relative; */
@@ -39,6 +41,8 @@
         #box-4{
             position: sticky;
             top: 3px;
+            background-color: black;
+            top: 250px;
         }
 
     </style>
